--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,7 @@ insert_final_newline = true
 
 [*.{yml,yaml,toml,html,css,scss,json,ts,tsx}]
 indent_size = 2
+
+[Makefile]
+indent_style = tab
+indent_size = 4
