fix: Try to make work skopeo in the context of GH Actions

--- a/.github/actions/make-docker-action/Dockerfile
+++ b/.github/actions/make-docker-action/Dockerfile
@@ -8,7 +8,8 @@ RUN set -euxo pipefail ;\
         go \
         make \
         skopeo \
-        libarchive-tools
+        libarchive-tools \
+        fuse-overlayfs
 
 COPY entrypoint.sh /entrypoint.sh
 
