minor: Add checksum to assets

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -104,5 +104,6 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-            LICENSE.txt
+            LICENSE
             build/rootfs.tar.gz
+            build/rootfs.tar.gz.sha256
