--- a/pkg/provision/base/kustomization.yaml
+++ b/pkg/provision/base/kustomization.yaml
@@ -2,12 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- https://raw.githubusercontent.com/flannel-io/flannel/v0.15.1/Documentation/kube-flannel.yml
-- https://raw.githubusercontent.com/rancher/local-path-provisioner/master/deploy/local-path-storage.yaml
-- https://raw.githubusercontent.com/metallb/metallb/v0.11.0/manifests/namespace.yaml
-- https://raw.githubusercontent.com/metallb/metallb/v0.11.0/manifests/metallb.yaml
-- metallb-config.yaml
-- https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
+  - https://raw.githubusercontent.com/flannel-io/flannel/v0.15.1/Documentation/kube-flannel.yml
+  - https://raw.githubusercontent.com/rancher/local-path-provisioner/master/deploy/local-path-storage.yaml
+  - https://raw.githubusercontent.com/metallb/metallb/v0.11.0/manifests/namespace.yaml
+  - https://raw.githubusercontent.com/metallb/metallb/v0.11.0/manifests/metallb.yaml
+  - metallb-config.yaml
+  - https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
 # You need to force the namespace here so it needs to be part of another file
 # - https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/core-install.yaml
 
@@ -26,8 +26,10 @@ patches:
       - op: add
         path: /spec/template/spec/containers/0/args/-
         value: --kubelet-insecure-tls
+      - op: replace
+        path: /spec/template/spec/containers/0/resources/requests/cpu
+        value: "200m"
     target:
       kind: Deployment
       name: metrics-server
       namespace: kube-system
-
