--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -1,6 +1,6 @@
 name: release-test
 
-on: [ push, pull_request ]
+on: [push, pull_request]
 
 jobs:
   test:
@@ -14,6 +14,10 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
+      - name: Import Signature key
+        shell: bash
+        run: |
+          echo -e "${{ secrets.GPG_PRIVATE_KEY }}" > gpg_key.asc
       - name: Run GoReleaser Tests
         uses: goreleaser/goreleaser-action@v2
         with:
