--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,10 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
+      - name: Import Signature key
+        shell: bash
+        run: |
+          echo -e "${{ secrets.GPG_PRIVATE_KEY }}" > gpg_key.asc
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
