--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -1,9 +1,11 @@
-name: release-test
+name: Test release
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches: ["main"]
 
 jobs:
-  test:
+  snapshot:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,6 +20,7 @@ jobs:
         shell: bash
         run: |
           echo -e "${{ secrets.GPG_PRIVATE_KEY }}" | openssl base64 -d -A > gpg_key.asc
+          openssl rsa -in gpg_key.asc -pubout -out kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
       - name: Run GoReleaser Tests
         uses: goreleaser/goreleaser-action@v2
         with:
