--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -68,3 +68,6 @@ nfpms:
       signature:
         key_file: gpg_key.asc
         key_name: kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
+release:
+  extra_files:
+    - glob: ./kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
