--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -19,8 +19,10 @@ jobs:
       - name: Import Signature key
         shell: bash
         run: |
-          echo -e "${{ secrets.GPG_PRIVATE_KEY }}" | openssl base64 -d -A > gpg_key.asc
+          echo -e "$GPG_PRIVATE_KEY" > gpg_key.asc
           openssl rsa -in gpg_key.asc -pubout -out kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       - name: Run GoReleaser Tests
         uses: goreleaser/goreleaser-action@v2
         with:
@@ -28,3 +30,10 @@ jobs:
           args: --snapshot --skip-publish --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build APK repo
+        uses: ./.github/actions/make-apkindex
+        with:
+          apk_files: dist/*.apk
+          signature_key: "${{ secrets.GPG_PRIVATE_KEY }}"
+          signature_key_name: kaweezle-devel@kaweezle.com-c9d89864.rsa
+          destination: dist/repo
