--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,10 @@ jobs:
       - name: Import Signature key
         shell: bash
         run: |
-          echo -e "${{ secrets.GPG_PRIVATE_KEY }}" | openssl base64 -d -A > gpg_key.asc
+          echo -e "$GPG_PRIVATE_KEY" > gpg_key.asc
           openssl rsa -in gpg_key.asc -pubout -out kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
