--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,27 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build APK repo
+        uses: ./.github/actions/make-apkindex
+        with:
+          apk_files: dist/*.apk
+          signature_key: "${{ secrets.GPG_PRIVATE_KEY }}"
+          signature_key_name: kaweezle-devel@kaweezle.com-c9d89864.rsa
+          destination: dist/repo
+      - name: Commit repo to kaweezle.com
+        uses: cpina/github-action-push-to-another-repository@main
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.REPO_ACCESS_TOKEN }}
+        with:
+          source-directory: dist/repo
+          destination-github-username: kaweezle
+          destination-repository-name: kaweezle.github.io
+          # TODO: replace with kaweezle-devel
+          user-name: antoinemartin
+          user-email: antoine@openance.com
+          target-branch: main
+          target-directory: docs/repo
+          commit-message: iknite APK repo ${{ github.ref_name }}
       - name: Trigger root fs build
         uses: peter-evans/repository-dispatch@v1
         with:
