--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   snapshot:
     runs-on: ubuntu-latest
+    if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
