--- a/.github/workflows/tag-on-version-change.yml
+++ b/.github/workflows/tag-on-version-change.yml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 name: Create Git Tag
 jobs:
@@ -8,6 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Update Version
-        uses: pterm/tag-action@main
+        uses: antoinemartin/tag-action@main
         env:
           ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
