✨ Option to wait for resources to settle
Currently it only waits for pods to be ready. It should be
smarter and also check the replicasets. As the provisioning
returns the provisionned resource ids, it should be possible
to check the deployments/statefulsets/daemonsets.
However, argo cd applications would also need to be taken
into account. Any kind of resource that can progress, in fact.

--- a/apk/iknite.d/argocd/kustomization.yaml
+++ b/apk/iknite.d/argocd/kustomization.yaml
@@ -5,9 +5,6 @@ namespace: argocd
 resources:
   - namespace.yaml
   - https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
-  - apisix.yaml
-  - openance-dev-tls.yaml
-  - argo-ingress.yaml
 
 patches:
   - patch: |-
@@ -17,4 +14,14 @@ patches:
     target:
       kind: Deployment
       name: argocd-server
-
+  - patch: |-
+      - op: replace
+        path: /spec/template/spec/containers/0/image
+        value: "chatwork/argocd-helmfile:latest"
+      - op: add
+        path: /spec/template/spec/containers/0/securityContext/runAsUser
+        value: 999
+    target:
+      kind: Deployment
+      name: argocd-repo-server
+  - path: configuration.yaml
