--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,7 +1,7 @@
 # This is an example .goreleaser.yml file with some sensible defaults.
 # Make sure to check the documentation at https://goreleaser.com
 env:
-  - KUBERNETES_VERSION=1.23.6
+  - KUBERNETES_VERSION=1.24.0
 before:
   hooks:
     - go mod tidy
@@ -78,16 +78,22 @@ nfpms:
         dst: /etc/iknite.d/base/metallb-generator.yaml
       - src: apk/iknite.d/base/plugins/metallb-config.sh
         dst: /etc/iknite.d/base/plugins/metallb-config.sh
-      # - src: apk/iknite.d/argocd/apisix.yaml
-      #   dst: /etc/iknite.d/argocd/apisix.yaml
-      # - src: apk/iknite.d/argocd/argo-ingress.yaml
-      #   dst: /etc/iknite.d/argocd/argo-ingress.yaml
-      # - src: apk/iknite.d/argocd/kustomization.yaml
-      #   dst: /etc/iknite.d/argocd/kustomization.yaml
-      # - src: apk/iknite.d/argocd/namespace.yaml
-      #   dst: /etc/iknite.d/argocd/namespace.yaml
-      # - src: apk/iknite.d/argocd/openance-dev-tls.yaml
-      #   dst: /etc/iknite.d/argocd/openance-dev-tls.yaml
+      - src: apk/iknite.d/argocd/kustomization.yaml
+        dst: /etc/iknite.d/argocd/kustomization.yaml
+      - src: apk/iknite.d/argocd/namespace.yaml
+        dst: /etc/iknite.d/argocd/namespace.yaml
+      - src: apk/iknite.d/argocd/configuration.yaml
+        dst: /etc/iknite.d/argocd/configuration.yaml
+      - src: apk/iknite.d/ingress/kustomization.yaml
+        dst: /etc/iknite.d/ingress/kustomization.yaml
+      # - src: apk/iknite.d/ingress/apisix.yaml
+      #   dst: /etc/iknite.d/ingress/apisix.yaml
+      # - src: apk/iknite.d/ingress/traefik.yaml
+      #   dst: /etc/iknite.d/ingress/traefik.yaml
+      # - src: apk/iknite.d/ingress/argo-ingress.yaml
+      #   dst: /etc/iknite.d/ingress/argo-ingress.yaml
+      # - src: apk/iknite.d/ingress/openance-dev-tls.yaml
+      #   dst: /etc/iknite.d/ingress/openance-dev-tls.yaml
     apk:
       signature:
         key_file: gpg_key.asc
