--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -11,7 +11,7 @@ builds:
     goos:
       - linux
     goarch:
-      - 386
+      - "386"
       - amd64
     mod_timestamp: "{{ .CommitTimestamp }}"
     flags:
@@ -21,6 +21,7 @@ builds:
         main.date={{ .CommitDate }} -X main.builtBy=pterm -X
         k8s.KubernetesVersion={{ .Env.KUBERNETES_VERSION }}
     binary: iknite
+    id: iknite
 archives:
   - name_template:
       "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
@@ -78,22 +79,6 @@ nfpms:
         dst: /etc/iknite.d/base/metallb-generator.yaml
       - src: apk/iknite.d/base/plugins/metallb-config.sh
         dst: /etc/iknite.d/base/plugins/metallb-config.sh
-      - src: apk/iknite.d/argocd/kustomization.yaml
-        dst: /etc/iknite.d/argocd/kustomization.yaml
-      - src: apk/iknite.d/argocd/namespace.yaml
-        dst: /etc/iknite.d/argocd/namespace.yaml
-      - src: apk/iknite.d/argocd/configuration.yaml
-        dst: /etc/iknite.d/argocd/configuration.yaml
-      - src: apk/iknite.d/ingress/kustomization.yaml
-        dst: /etc/iknite.d/ingress/kustomization.yaml
-      # - src: apk/iknite.d/ingress/apisix.yaml
-      #   dst: /etc/iknite.d/ingress/apisix.yaml
-      # - src: apk/iknite.d/ingress/traefik.yaml
-      #   dst: /etc/iknite.d/ingress/traefik.yaml
-      # - src: apk/iknite.d/ingress/argo-ingress.yaml
-      #   dst: /etc/iknite.d/ingress/argo-ingress.yaml
-      # - src: apk/iknite.d/ingress/openance-dev-tls.yaml
-      #   dst: /etc/iknite.d/ingress/openance-dev-tls.yaml
     apk:
       signature:
         key_file: gpg_key.asc
