🐛 Initial configuration error (Admission Webhook)
MetalLB defines admission webhooks for custom resources.
One need to wait for the controller to be available before
creating the IPAddressPool and L2Advertisement resource.

In consequence, instead of creating the resources in Kustomize, we create
a Job that waits for the controller to be available before  creating the
resources.

--- a/apk/iknite.d/base/kustomization.yaml
+++ b/apk/iknite.d/base/kustomization.yaml
@@ -6,9 +6,7 @@ resources:
   - https://raw.githubusercontent.com/rancher/local-path-provisioner/master/deploy/local-path-storage.yaml
   - https://raw.githubusercontent.com/metallb/metallb/v0.13.4/config/manifests/metallb-native.yaml
   - https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
-
-generators:
-  - metallb-generator.yaml
+  - ./metallb-addresspool.yaml
 
 patches:
   - patch: |-
