--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -10,20 +10,16 @@ jobs:
       matrix:
         os: [ubuntu-latest]
     steps:
-      - name: Set up Go 1.x
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
         with:
-          go-version: ^1
+          go-version-file: go.mod
+          check-latest: true
+          cache: true
         id: go
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
-
-      - name: Get dependencies
-        run: go get -v -t -d ./...
 
       - name: Build
         run: go build -v .
 
       - name: Test
-        run: go test -v .
+        run: go test -v ./...
