--- a/rootfs/Dockerfile
+++ b/rootfs/Dockerfile
@@ -1,19 +1,21 @@
 # syntax=docker/dockerfile:1.3-labs
 FROM alpine:3.17
 
-ARG IKNITE_VERSION=0.1.26
+ARG IKNITE_VERSION=0.2.0
+ARG IKNITE_LAST_TAG=0.2.0
 ARG IKNITE_REPO_URL=https://kaweezle.com/repo/
 ARG IKNITE_KEY_NAME=kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
 ARG IKNITE_BASE_URL=https://github.com/kaweezle/iknite/releases/download
-ARG KUBERNETES_VERSION=1.25.0
+ARG KUBERNETES_VERSION=1.26.0
 
 # Add the dependencies
-RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing/" >> /etc/apk/repositories && \
+RUN --mount=type=bind,target=/apks  \
+    echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing/" >> /etc/apk/repositories && \
     echo "${IKNITE_REPO_URL}" >> /etc/apk/repositories && \
-    echo "${IKNITE_BASE_URL}/v${IKNITE_VERSION}/${IKNITE_KEY_NAME}" && \
-    wget -O /etc/apk/keys/${IKNITE_KEY_NAME} "${IKNITE_BASE_URL}/v${IKNITE_VERSION}/${IKNITE_KEY_NAME}" && \
+    wget -O /etc/apk/keys/${IKNITE_KEY_NAME} "${IKNITE_BASE_URL}/${IKNITE_LAST_TAG}/${IKNITE_KEY_NAME}" && \
     apk update --quiet && \
-    apk add --quiet --no-progress --no-cache openrc zsh iknite krmfnsops && \
+    apk add --no-progress --no-cache openrc zsh krmfnsops && \
+    apk add --no-progress --no-cache /apks/iknite-${IKNITE_VERSION}.x86_64.apk && \
     rm -rf `find /var/cache/apk/ -type f`
 
 # Change root shell
@@ -49,9 +51,9 @@ RUN --security=insecure apk add podman fuse-overlayfs && \
     sed -ie 's/^#mount_program/mount_program/' /etc/containers/storage.conf && \
     podman image pull \
         registry.k8s.io/pause:3.8 \
-        registry.k8s.io/pause:3.6 \
+        registry.k8s.io/pause:3.9 \
         registry.k8s.io/kube-controller-manager:v${KUBERNETES_VERSION} \
-        registry.k8s.io/etcd:3.5.4-0 \
+        registry.k8s.io/etcd:3.5.6-0 \
         registry.k8s.io/kube-proxy:v${KUBERNETES_VERSION} \
         registry.k8s.io/kube-scheduler:v${KUBERNETES_VERSION} \
         registry.k8s.io/coredns/coredns:v1.9.3 \
@@ -59,8 +61,8 @@ RUN --security=insecure apk add podman fuse-overlayfs && \
         docker.io/rancher/local-path-provisioner:master-head \
         docker.io/rancher/mirrored-flannelcni-flannel-cni-plugin:v1.1.0 \
         rancher/mirrored-flannelcni-flannel:v0.20.2 \
-        quay.io/metallb/controller:v0.13.5 \
-        quay.io/metallb/speaker:v0.13.5 \
+        quay.io/metallb/controller:v0.13.7 \
+        quay.io/metallb/speaker:v0.13.7 \
         k8s.gcr.io/metrics-server/metrics-server:v0.6.2 \
         docker.io/boxboat/kubectl:${KUBERNETES_VERSION} && \
     sed -ie 's/^mount_program/#mount_program/' /etc/containers/storage.conf && \
