--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,18 @@
 {
-    "proseWrap": "always"
+    "overrides": [
+        {
+          "files": "*.yaml",
+          "options": {
+            "singleQuote": false,
+            "bracketSpacing": false
+          }
+        },
+        {
+            "files": "*.md",
+            "options": {
+                "proseWrap": "always",
+                "tabWidth": 2
+            }
+        }
+      ]
 }
