--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -1,3 +1,4 @@
+# cSpell: disable
 name: Test release
 
 on:
@@ -39,6 +40,7 @@ jobs:
           path: |
             dist/*.apk
             dist/metadata.json
+            dist/SHA256SUMS
       - name: Build APK repo
         uses: ./.github/actions/make-apkindex
         with:
@@ -105,12 +107,15 @@ jobs:
              --cache-from type=local,src=/tmp/.buildx-cache \
              --cache-to type=local,dest=/tmp/.buildx-cache-new \
              --output type=tar . | gzip >kaweezle.rootfs.tar.gz
+          sha256sum kaweezle.rootfs.tar.gz >> ../packages/SHA256SUMS
 
       - name: Upload root fs artifact
         uses: actions/upload-artifact@v3
         with:
           name: rootfs
-          path: "${{ github.workspace }}/rootfs/kaweezle.rootfs.tar.gz"
+          path: |
+            rootfs/kaweezle.rootfs.tar.gz
+            packages/SHA256SUMS
 
       - name: Move cache
         run: |
