--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -32,7 +32,7 @@ archives:
       {{- else }}{{ .Arch }}{{ end }}
       {{- if .Arm }}v{{ .Arm }}{{ end }}
 checksum:
-  name_template: "{{ .ProjectName }}_checksums.txt"
+  name_template: SHA256SUMS
 snapshot:
   name_template: "{{ incpatch .Version }}-devel"
 changelog:
