--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -87,6 +87,10 @@ nfpms:
         dst: /etc/init.d/iknite-init
       - src: apk/init.d/iknite-config
         dst: /etc/init.d/iknite-config
+      - src: apk/conf.d/iknite-init
+        dst: /etc/conf.d/iknite-init
+      - src: apk/conf.d/iknite-config
+        dst: /etc/conf.d/iknite-config
     apk:
       signature:
         key_file: gpg_key.asc
