--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -91,6 +91,8 @@ nfpms:
         dst: /etc/conf.d/iknite-init
       - src: apk/conf.d/iknite-config
         dst: /etc/conf.d/iknite-config
+      - src: apk/iknite-killall.sh
+        dst: /sbin/apk/iknite-killall.sh
     apk:
       signature:
         key_file: gpg_key.asc
