--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -64,11 +64,12 @@ nfpms:
     dependencies:
       - openrc
       - ip6tables
-      - cri-o
+      - containerd
       - kubelet
       - kubeadm
       - kubectl
-      - cri-o-contrib-cni
+      - cni-plugins
+      - cni-plugin-flannel
       - git
       - util-linux-misc
     bindir: /sbin
