--- a/rootfs/Dockerfile
+++ b/rootfs/Dockerfile
@@ -1,20 +1,21 @@
 # syntax=docker/dockerfile:1.3-labs
 FROM alpine:3.19
 
-ARG IKNITE_VERSION=0.2.0
-ARG IKNITE_LAST_TAG=0.2.0
+ARG IKNITE_VERSION=0.2.5-devel
+ARG IKNITE_LAST_TAG=v0.2.4
 ARG IKNITE_REPO_URL=https://kaweezle.com/repo/
 ARG IKNITE_KEY_NAME=kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
 ARG IKNITE_BASE_URL=https://github.com/kaweezle/iknite/releases/download
-ARG KUBERNETES_VERSION=1.28.4
+ARG KUBERNETES_VERSION=1.29.3
 
 # Add the dependencies
 RUN --mount=type=bind,target=/apks  \
+    echo "http://dl-cdn.alpinelinux.org/alpine/edge/community/" >> /etc/apk/repositories && \
     echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing/" >> /etc/apk/repositories && \
     echo "${IKNITE_REPO_URL}" >> /etc/apk/repositories && \
     wget -O /etc/apk/keys/${IKNITE_KEY_NAME} "${IKNITE_BASE_URL}/${IKNITE_LAST_TAG}/${IKNITE_KEY_NAME}" && \
     apk update --quiet && \
-    apk add --no-progress --no-cache openrc zsh krmfnsops && \
+    apk add --no-progress --no-cache openrc zsh nerdctl krmfnsops && \
     apk add --no-progress --no-cache /apks/iknite-${IKNITE_VERSION}.x86_64.apk && \
     rm -rf `find /var/cache/apk/ -type f`
 
@@ -46,28 +47,7 @@ RUN install -m 700 -o root -g root /usr/share/oh-my-zsh/templates/zshrc.zsh-temp
 
 COPY --chown=root:root ./p10k.zsh /root/.p10k.zsh
 
-# Adding images
-RUN --security=insecure apk add podman fuse-overlayfs && \
-    sed -ie 's/^#mount_program/mount_program/' /etc/containers/storage.conf && \
-    podman image pull \
-        registry.k8s.io/pause:3.8 \
-        registry.k8s.io/pause:3.9 \
-        registry.k8s.io/kube-controller-manager:v${KUBERNETES_VERSION} \
-        registry.k8s.io/etcd:3.5.9-0 \
-        registry.k8s.io/kube-proxy:v${KUBERNETES_VERSION} \
-        registry.k8s.io/kube-scheduler:v${KUBERNETES_VERSION} \
-        registry.k8s.io/coredns/coredns:v1.10.1 \
-        registry.k8s.io/kube-apiserver:v${KUBERNETES_VERSION} \
-        docker.io/rancher/local-path-provisioner:master-head \
-        docker.io/flannel/flannel-cni-plugin:v1.4.0-flannel1 \
-        docker.io/flannel/flannel:v0.25.1 \
-        quay.io/metallb/controller:v0.13.7 \
-        quay.io/metallb/speaker:v0.13.7 \
-        k8s.gcr.io/metrics-server/metrics-server:v0.6.2 \
-        docker.io/boxboat/kubectl:${KUBERNETES_VERSION} && \
-    sed -ie 's/^mount_program/#mount_program/' /etc/containers/storage.conf && \
-    apk del podman fuse-overlayfs && \
-    rm -rf `find /var/cache/apk/ -type f`
+RUN --mount=type=bind,target=/build --security=insecure /build/install_images.sh ${KUBERNETES_VERSION}
 
 # Run shell by default. Allows using the docker image
 CMD /bin/zsh
