📌 Update github actions versions

--- a/.github/workflows/tag-on-version-change.yml
+++ b/.github/workflows/tag-on-version-change.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches: [main]
 
-name: Create Git Tag
+name: Create Git Tag when version changes in code
 jobs:
   versioner:
     name: Create a tag if version has changed
