--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -1,4 +1,4 @@
-name: Go
+name: Build and test with Go
 
 on: [push, pull_request]
 
@@ -10,8 +10,8 @@ jobs:
       matrix:
         os: [ubuntu-latest]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
           check-latest: true
