✨ Install flannel locally to improve starting speed

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -70,6 +70,7 @@ nfpms:
       - kubectl
       - cni-plugins
       - cni-plugin-flannel
+      - flannel
       - git
       - util-linux-misc
     bindir: /sbin
@@ -94,6 +95,10 @@ nfpms:
         dst: /etc/conf.d/iknite-config
       - src: apk/iknite-killall.sh
         dst: /sbin/iknite-killall.sh
+      - src: apk/flannel/10-flannel.conflist
+        dst: /etc/cni/net.d/10-flannel.conflist
+      - src: apk/flannel/subnet.env
+        dst: /lib/iknite/flannel/subnet.env
     apk:
       signature:
         key_file: gpg_key.asc
