--- a/apk/iknite.d/base/kustomization.yaml
+++ b/apk/iknite.d/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - ./kube-flannel.yaml
   - https://raw.githubusercontent.com/rancher/local-path-provisioner/master/deploy/local-path-storage.yaml
   - https://raw.githubusercontent.com/metallb/metallb/v0.14.5/config/manifests/metallb-native.yaml
   - https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
