--- a/rootfs/rc.conf
+++ b/rootfs/rc.conf
@@ -2,3 +2,4 @@ rc_sys="prefix"
 rc_controller_cgroups="NO"
 rc_depend_strict="NO"
 rc_need="!net !dev !udev-mount !sysfs !checkfs !fsck !netmount !logger !clock !modules"
+rc_kubelet_need="fail"
