--- a/pkg/provision/base/kustomization.yaml
+++ b/pkg/provision/base/kustomization.yaml
@@ -2,14 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - https://raw.githubusercontent.com/flannel-io/flannel/v0.17.0/Documentation/kube-flannel.yml
+  - ./kube-flannel.yaml
   - https://raw.githubusercontent.com/rancher/local-path-provisioner/master/deploy/local-path-storage.yaml
-  - https://raw.githubusercontent.com/metallb/metallb/v0.12.1/manifests/namespace.yaml
-  - https://raw.githubusercontent.com/metallb/metallb/v0.12.1/manifests/metallb.yaml
-  - metallb-config.yaml
+  - https://raw.githubusercontent.com/metallb/metallb/v0.14.5/config/manifests/metallb-native.yaml
   - https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
-# You need to force the namespace here so it needs to be part of another file
-# - https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/core-install.yaml
+  - ./metallb-addresspool.yaml
 
 patches:
   - patch: |-
