🩹 add openssh package in order enable git configuration

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -71,6 +71,7 @@ nfpms:
       - cni-plugins
       - cni-plugin-flannel
       - git
+      - openssh
       - util-linux-misc
     bindir: /sbin
     contents:
