🚧 Checking why apk packaging fails

--- a/.github/actions/make-apkindex/Dockerfile
+++ b/.github/actions/make-apkindex/Dockerfile
@@ -1,6 +1,6 @@
 
 FROM alpine:edge
-RUN apk --update add alpine-sdk
+RUN apk --update add alpine-sdk openssl
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT /entrypoint.sh
