--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run GoReleaser Tests
         uses: goreleaser/goreleaser-action@v5
         with:
-          version: latest
+          version: '~> v2'
           args: --snapshot --skip=publish --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
