--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -8,7 +8,8 @@ before:
   hooks:
     - go mod tidy
 builds:
-  - env:
+  - main: ./cmd/iknite/iknite.go
+    env:
       - CGO_ENABLED=0
     goos:
       - linux
