✏️ add cspell and fix typos

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -30,6 +30,7 @@
         "redhat.vscode-xml",
         "redhat.vscode-yaml",
         "tamasfe.even-better-toml",
+        "streetsidesoftware.code-spell-checker",
         // Project related
         "ms-kubernetes-tools.vscode-kubernetes-tools",
         "golang.Go",
